--- a/starter/styles/about.css
+++ b/starter/styles/about.css
@@ -1,6 +1,3 @@
-/* TODO: Manually optimize CSS styling. */
-/* Remove unused and unnecessary styling and selectors */
-/* About page Styling */
 .aboutContainer {
   display: flex;
   flex-direction: row-reverse;
@@ -8,38 +5,31 @@
   align-items: center;
 }
 
-
- .aboutContainer img {
+.aboutContainer img {
   width: 400px;
-  height: 300px;
+  height: auto;
   border-radius: 10%;
 }
 
- .textContainer {
+.textContainer {
   width: 550px;
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  align-items: start;
-  padding: 0 20px 20px 50px;
-  white-space: pre-wrap;
+  padding: 20px;
 }
 
- .textContainer h2 {
+.textContainer h2 {
   font-size: 3rem;
   text-transform: uppercase;
-  text-align: center;
 }
 
- .textContainer h3 {
+.textContainer h3 {
   font-size: 2rem;
 }
 
 .textContainer p {
   font-size: 1.5rem;
 }
-
-
 
 /* Media Query for Tablets (768px and below) */
 @media (max-width: 768px) {
