--- a/starter/styles/style.css
+++ b/starter/styles/style.css
@@ -1,16 +1,7 @@
-/* General Styling */
-
-
-li {
-  list-style: none;
-}
-
-
 body {
   display: flex;
   flex-direction: row;
-  font-family: 'Inter', sans-serif;
-
+  font-family: "Inter", sans-serif;
 }
 
 main {
@@ -18,8 +9,10 @@ main {
   padding: 5%;
   display: flex;
   justify-content: center;
-  align-items: center;
+}
 
+li {
+  list-style: none;
 }
 
 .notVisible {
@@ -30,10 +23,9 @@ button {
   border: none;
   background-color: #45e9f5;
   color: white;
-  text-transform: uppercase;
   padding: 10px;
-  font-weight: bold;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
